--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><span>Wind</span> <span>0km/h</span></li>
             </ul>
             <ul class="days">
-                <li>
+                <li class="active">
                     <span><i class="fa-solid fa-sun"></i></span>
                     <span>Sun</span>
                     <span>29&deg;C</span>
